--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@reduxjs/toolkit": "^2.2.3",
     "@types/react": "~18.2.14",
     "expo": "^49.0.0",
     "expo-app-loading": "^2.1.1",
@@ -25,6 +26,7 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-redux": "^9.1.1",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
